examples/test/testpolicy17823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17823
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key5: value32
      key8: value9
      key22: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value10
          key22: value1
          key10: value34
      podSelector:
        matchLabels:
          key2: value3
          key12: value11
